feat: game has a basic menu
doc: updated readme wasm instructions so that they work properly
feat: wasm packaged properly in public directory
fix: updated index.html to run the wasm

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,16 @@
-Hellooooo!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Plants & Pests</title>
+</head>
+<body style="margin: 0 !important; padding: 0 !important;">
+<script type="module">
+    import init from './plants-n-pests.js'
+    init()
+
+    document.addEventListener('contextmenu', function (evt) {
+        evt.preventDefault();
+    })
+</script>
+</body>
+</html>
