fix: update index.html with correct app filename

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="margin: 0 !important; padding: 0 !important;">
 <script type="module">
-    import init from './plants-n-pests.js'
+    import init from './plantsnpests.js'
     init()
 
     document.addEventListener('contextmenu', function (evt) {
