docs: update readme with instructions to play

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Plants & Pests</title>
 </head>
 <body style="margin: 0 !important; padding: 0 !important;">
