--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="margin: 0 !important; padding: 0 !important;">
 <script type="module">
-    import init from './plantsnpests.js'
+    import init from './plantsandpests.js'
     init()
 
     document.addEventListener('contextmenu', function (evt) {
