--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,8 @@
 <head>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Plants & Pests</title>
-    <style type="text/css">
-      html {
-        overflow-y: hidden;
-        overflow-x: hidden;
-      }
-    </style>
 </head>
-<body style="margin: 0 !important; padding: 0 !important;">
+<body style="margin: 0 !important; padding: 0 !important; overflow-y: hidden; overflow-x: hidden;">
 <script type="module">
     import init from './plantsandpests.js'
     init()
